--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>RELEASE</version>
+            <version>1.10.19</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -35,6 +35,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.2.8.RELEASE</version>
         </dependency>
 
     </dependencies>
